--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge 2</title>
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <script type="module" src="main.js">  </script>
 </head>
 
 <body>
